--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body style.color="white">
     <nav id="desktop-nav">
-        <div class="logo">Portfolio</div>
+        <div class="logo"> My Portfolio</div>
         <div>
             <ul class="nav-links">
                 <li><a href="#About ">About</a></li>
